data/derived/comb/progs/unify/prog8455.ml.out
Characters 121-132:
  if (j+k>10) then (1, j+k-10) else (0, j+k) in 
                   ^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type 'c list
